<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Sign in with Twitter</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="lableUserName">User</string>
    <string name="txtUserHandle">\@Handle</string>
    <string name="txtTweetBody">Tweet</string>
    <string name="txtTweetedSince">1 sec</string>
    <string name="btlblTweet">Tweet</string>
    <string name="txtRemainingChars">140</string>
    <string name="hntComposeTweet">What\'s happening?</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>