<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    
     >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="ProfileImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher" 
        
        />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/lableUserName"
        android:layout_marginLeft="5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTweetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_below="@+id/tvUserName"
        android:layout_marginBottom="5dp"
        android:autoLink="all"
        android:linksClickable="true"
        android:layout_marginTop="3dp"
        android:layout_marginRight="5dp"
        android:text="@string/txtTweetBody"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
        android:textSize="@dimen/TweetBodySize"
        android:fontFamily="monotype"
 android:textStyle="normal"
         />

    <TextView
        android:id="@+id/tvUserHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/tvUserName"
        android:textColor="@android:color/darker_gray"
        android:text="@string/txtUserHandle" />

    <TextView
        android:id="@+id/tvTweetedSince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/darker_gray"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        
        android:textSize="@dimen/TweetBodySize"
        android:text="@string/txtTweetedSince" />

</RelativeLayout>
